# TheTinyProject

./: CMakeLists.txt  LICENSE  README.md  REPORT.aux  REPORT.fdb_latexmk  REPORT.fls  REPORT.lof  REPORT.lot  REPORT.md  REPORT.tex  build.bat  run.bat
PartA/: PosSymLinSystem.cpp
Prediction/: model.txt
chapters/: 1-Introduction.aux  1-Introduction.tex  2-Implementation.tex  3-Application.tex  4-Conclusion.tex  Appendix.tex  appendix.tex  chap_1.tex  chap_2.tex  chap_3.tex  chap_4.tex
include/: DataParser.h  LinearSystem.h  Matrix.h  PosSymLinSystem.h  Regression.h  Vector.h
src/: CPUprediction.cpp  DataParser.cpp  LinearSystem.cpp  Matrix.cpp  PosSymLinSystem.cpp  Regression.cpp  Vector.cpp  main.cpp
test/: TestDataParser  TestDataParser.cpp  TestLinearSystem.cpp  TestMatrix.cpp  TestRegression  TestRegression.cpp  TestVector  TestVector.cpp  runLinearSystem.bat  runMatrix.bat  runVector.bat
test_main/: TestLinearSystem  TestLinearSystem.cpp  TestMatrix  TestMatrix.cpp  TestRegression.cpp  TestVector  test.cpp
